Fix issues with flickering box shadow

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -3,9 +3,9 @@
   font-size: $font-normal;  
   font-weight: 500;
   color: $grey-dark;
-  -webkit-transition: opacity .2s ease-in-out, background .2s ease-in-out, box-shadow .2s ease-in-out;
-  -o-transition: opacity .2s ease-in-out, background .2s ease-in-out, box-shadow .2s ease-in-out;
-  transition: opacity .2s ease-in-out, background .2s ease-in-out, box-shadow .2s ease-in-out;
+  -webkit-transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
+  -o-transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
+  transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
   &.btn--lg { @include padding-mixin(0.5rem 3rem) } 
   &.btn--green, {
     background: $green;
@@ -16,7 +16,7 @@
     color: $white;
   }
   &:not([disabled]):hover, &:not([disabled]):focus  {
-    box-shadow: 0 0 2px 1px $grey-dark;
+    box-shadow: 0 0 2px .01px $grey-dark;
   }
 
 }
@@ -75,9 +75,9 @@
   font-size: $font-normal;  
   font-weight: 500;
   color: $grey-dark;
-  -webkit-transition: opacity .2s ease-in-out, background .2s ease-in-out, box-shadow .2s ease-in-out;
-  -o-transition: opacity .2s ease-in-out, background .2s ease-in-out, box-shadow .2s ease-in-out;
-  transition: opacity .2s ease-in-out, background .2s ease-in-out, box-shadow .2s ease-in-out;
+  -webkit-transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
+  -o-transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
+  transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
   &.btn--lg { @include padding-mixin(0.5rem 3rem) } 
   &:not(.remove) {
     &.cartbtn:before {
@@ -98,9 +98,22 @@
     color: $white;
   }
   &:not([disabled]):hover, &:not([disabled]):focus  {
-    box-shadow: 0 0 2px 1px $grey-dark;
+    box-shadow: 0 0 2px .01px $grey-dark;
+  }
+  &.btn-no-bg {
+    background: none;
+    border: 0;
+    &:focus {
+      outline: 0;
+    }
   }
 
+  &.btn-underlined {
+    text-decoration: underline;
+    &:hover {
+      text-decoration: none;
+    }
+  }
 }
 
 .t-data .t-data__btn-portal { min-width: 183.48px; } //required from ngCart
